--- a/app/src/main/res/layout/activity_calorie_homepage.xml
+++ b/app/src/main/res/layout/activity_calorie_homepage.xml
@@ -123,38 +123,19 @@
                             android:background="@color/panel_color">
 
                             <TextView
-                                android:id="@+id/Breakfast_Label"
+                                android:id="@+id/Food_Logging_Label"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:text="Breakfast:"
+                                android:text="Food Logging:"
                                 android:textColor="@color/black"
                                 android:textAlignment="center"
-                                android:textSize="20sp"/>
+                                android:textSize="20sp"
+                                android:onClick="To_Breakfast_Recycler"
+                                />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_marginTop="20dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:background="@color/background_color">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:background="@color/panel_color">
-
-                            <TextView
-                                android:id="@+id/Dinner_Label"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="Dinner:"
-                                android:textColor="@color/black"
-                                android:textAlignment="center"
-                                android:textSize="20sp"/>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -206,38 +187,16 @@
                             android:background="@color/panel_color">
 
                             <TextView
-                                android:id="@+id/Lunch_Label"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="Lunch:"
-                                android:textColor="@color/black"
-                                android:textAlignment="center"
-                                android:textSize="20sp"/>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_marginTop="20dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:background="@color/panel_color">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:background="@color/panel_color">
-
-                            <TextView
                                 android:id="@+id/Exercise_Label"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 android:text="Exercise:"
                                 android:textColor="@color/black"
                                 android:textAlignment="center"
                                 android:textSize="20sp"/>
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
+
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
