--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -349,16 +349,68 @@
             </LinearLayout>
         </ScrollView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="4">
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/Search_Bar"
+        android:layout_centerHorizontal="true"
+        android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/Breakfast_Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_below="@+id/Search_Bar"
-            android:layout_centerHorizontal="true"/>
+            android:text="Add Breakfast"
+            android:layout_margin="6dp"
+            android:textSize="15dp"
+            android:backgroundTint="@color/interface_color"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:onClick="Add_Breakfast_Button"
+            android:layout_weight="1"
 
+            />
+
+        <Button
+            android:id="@+id/Lunch_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Lunch"
+            android:layout_margin="6dp"
+            android:textSize="15dp"
+            android:backgroundTint="@color/interface_color"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:onClick="Add_Lunch_Button"
+            android:layout_weight="1"
+
+            />
+
+        <Button
+            android:id="@+id/Dinner_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Dinner"
+            android:layout_margin="6dp"
+            android:textSize="15dp"
+            android:backgroundTint="@color/interface_color"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:onClick="Add_Dinner_Button"
+            android:layout_weight="1"
+
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
 
